Formatted js file, oved buttons to right side, moved label above the input, added padding to buttons and text fields, changed fnt and buttons font color, fixed overflow on long text, used strict mode, removed list markers, removed large side margins on narrow screens.

--- a/TodoList/style.css
+++ b/TodoList/style.css
@@ -1,50 +1,79 @@
 body {
     height: 100%;
     background-color: #F5F5DC;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .page {
     margin: 0 auto;
-    max-width: 50vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
+    max-width: 600px;
+    width: 100%;
+    padding: 20px;
+}
+
+.header {
+    text-align: center;
 }
 
 .form-list {
-    padding: 30px;
+    padding: 10px;
     border: #000 solid 1px;
 }
 
-ul {
+#todo-list {
     list-style-position: inside;
     padding-left: 20px;
 }
 
-li {
+.list-item {
     padding: 10px;
 }
 
 .error-message {
-    color: #f00;
+    color: #F00;
     display: none;
 }
 
 .invalid {
-    border: #f00 solid 1px;
+    border: #F00 solid 1px;
 }
 
-.invalid ~ .error-message {
+.input-container:has(.invalid) ~ .error-message, .edit-container:has(.invalid) ~ .error-message {
     display: block;
+}
+
+#new-todo-item-text-field {
+    display: block;
+    flex-grow: 1;
+    min-width: 0;
+}
+
+.button, #new-todo-item-text-field, .edit-todo-item-text-field {
+    padding: 0 5px;
+}
+
+.todo-item-text {
+    max-width: 281px;
+}
+
+.button {
+    color: #FFF;
 }
 
 .create-button {
     display: block;
-    background-color: #0000FF;
+    background-color: #00F;
     color: #FFF;
     font-size: 15px;
     cursor: pointer;
+    flex-shrink: 0;
+}
+
+.input-container {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+
 }
 
 .create-button:hover {
@@ -80,4 +109,29 @@ li {
 
 .delete-button:hover {
     background-color: #D65837;
+}
+
+.todo-item, .edit-container {
+    min-width: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.todo-item span {
+    flex-grow: 1;
+    flex-shrink: 1;
+    min-width: 0;
+    overflow-wrap: break-word;
+}
+
+.todo-item div, .edit-container div {
+    flex-shrink: 0;
+}
+
+.edit-delete-buttons-container {
+    display: flex;
+    justify-content: flex-end;
+    gap: 5px;
 }
